# SimpleCC

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh
.github/workflows/: build.yml
Source/: InstrumentPresets.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
